--- a/ChampionsQuest/src/main/resources/templates/inventory.html
+++ b/ChampionsQuest/src/main/resources/templates/inventory.html
@@ -23,13 +23,14 @@
         <div>
             <table class="inv-display">
                 <tbody class="inv-body">
-                    <tr class="item-row">
+                    <tr class="underline-row">
                         <th class="item-head">Item</th>
                         <th class="item-head">Attack</th>
                         <th class="item-head">Defense</th>
                         <th class="item-head">Value</th>
+                        <th class="item-head">Description</th>
                     </tr>
-                    <tr class="item-row" th:each = "item: ${inventory}">
+                    <tr class="underline-row" th:each = "item: ${inventory}">
                         <td class="item item-name" th:text = "${item.name}"></td>
                         <td class="item" th:text = "${item.attack}"></td>
                         <td class="item" th:text = "${item.defense}"></td>
@@ -44,6 +45,12 @@
                 </tbody>
             </table>
         </div>
+    </div>
+    <div class="inventory-nav nav-bar">
+        <div><a th:href="@{/map}" class="nav-link">View Map</a></div>
+        <div><a th:href="@{/camp}" class="nav-link">Return to Camp</a></div>
+        <div><a th:href="@{/contact}" class="nav-link">Contact Form</a></div>
+        <div><a th:href="@{/logout}" class="nav-link">Logout</a></div>
     </div>
 </div>
 </body>
